--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-xs-8 col-xs-offset-2 menu" ng-controller="Settings as vm">
+  <div class="col-xs-12 col-md-8 col-md-offset-2 menu" ng-controller="Settings as vm">
     <div class="row search">
       <form>
         <div class="input-group">
@@ -15,16 +15,26 @@
         <span class="tag label label-default" ng-repeat="tag in vm.tags | orderBy:tag" ng-click="vm.toggleTag(tag)" ng-class="{ selected:vm.tagIsSelected(tag) }">{{ tag.get('name') }}</span>
       </div>
       <div class="options col-xs-12 col-md-4">
-        <a class="btn btn-primary btn-sm btn-embossed pull-left" href ng-click="vm.clearTags()">Clear tags</a>
-        <div class="btn-toolbar">
-          <div class="btn-group">
-            <a href class="btn btn-sm btn-primary" ng-class="{ active:!vm.styleList }" ng-click="vm.setStyleGrid()"><i class="fa fa-th"></i></a>
-            <a href class="btn btn-sm btn-primary" ng-class="{ active:vm.styleList }" ng-click="vm.setStyleList()"><i class="fa fa-list"></i></a>
+        <div class="row">
+          <div class="col-xs-12">
+            <div class="btn-toolbar">
+              <div class="btn-group btn-group-justified">
+                <a href class="btn btn-sm btn-primary btn-embossed" ng-repeat="lang in vm.languages" ng-click="vm.setLanguage(lang)" ng-class="{ active:vm.langIsSelected(lang) }">{{ lang.get('name') }}</a>
+              </div>
+            </div>
           </div>
         </div>
-        <div class="btn-toolbar">
-          <div class="btn-group">
-            <a href class="btn btn-sm btn-primary" ng-repeat="lang in vm.languages" ng-click="vm.setLanguage(lang)" ng-class="{ active:vm.langIsSelected(lang) }">{{ lang.get('name') }}</a>
+        <div class="row settings-row">
+          <div class="col-xs-6">
+            <a class="btn btn-primary btn-sm btn-embossed btn-block" href ng-click="vm.clearTags()">Clear tags</a>
+          </div>
+          <div class="col-xs-6">
+            <div class="btn-toolbar">
+              <div class="btn-group btn-group-justified">
+                <a href class="btn btn-sm btn-primary btn-embossed" ng-class="{ active:!vm.styleList }" ng-click="vm.setStyleGrid()"><i class="fa fa-th"></i></a>
+                <a href class="btn btn-sm btn-primary btn-embossed" ng-class="{ active:vm.styleList }" ng-click="vm.setStyleList()" disabled><i class="fa fa-th-large"></i></a>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -70,7 +80,7 @@
     </div>
   </div>
   <div class="row">
-    <!-- Pagination -->
+    <dir-pagination-controls template-url="app/layout/dirPagination.tpl.html" class="text-center"></dir-pagination-controls>
   </div>
   <div class="message" ng-show="!filteredControls.length">
     <div class="col-xs-12 text-center">
