Add report and email service

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
     <!-- Services -->
     <script src="app/services/settingsservice.js"></script>
     <script src="app/services/githubservice.js"></script>
+    <script src="app/services/emailservice.js"></script>
 
     <!-- Settings -->
     <script src="app/settings/settings.module.js"></script>
