--- a/app/control/control.html
+++ b/app/control/control.html
@@ -49,5 +49,7 @@
   <div class="row text-center single-control-report">
     <a class="btn btn-danger btn-xs btn-embossed" href=""  data-toggle="modal" data-target="#report-modal">Report</a>
   </div>
-  <div ng-include="'app/control/report.html'"></div>
+  <div ng-controller="Report as vm">
+    <ng-include src="'app/control/report.html'"></ng-include>
+  </div>
 </div>
