--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Curated Controls - Hand picked, open source controls for iOS</title>
 
     <link href="content/css/bootstrap.css" rel="stylesheet">
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="content/css/font-awesome.min.css" rel="stylesheet">
     <link href="content/css/flat-ui.css" rel="stylesheet">
     <link href="content/css/style.css" rel="stylesheet">
     <link href="content/css/flexslider.css" rel="stylesheet">
@@ -27,15 +27,14 @@
     <ng-include src="'app/about/about.html'"></ng-include>
 
     <!-- Vendor -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular-route.js"></script>
-
+    <script src="scripts/jquery.min.js"></script>
+    <script src="scripts/angular.min.js"></script>
+    <script src="scripts/angular-route.js"></script>
     <script src="scripts/jquery.flexslider.js"></script>
     <script src="scripts/angular-flexslider.js"></script>
     <script src="scripts/dirPagination.js"></script>
     <script src="scripts/loading-bar.js"></script>
-    <script src="http://www.parsecdn.com/js/parse-1.6.0.min.js"></script>
+    <script src="scripts/parse-1.6.0.min.js"></script>
     <script src="scripts/flat-ui.min.js"></script>
 
     <!-- Bootstrap -->
