On build: Inject css and js, generate plato report, copy content

--- a/index.html
+++ b/index.html
@@ -6,12 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Curated Controls - Hand picked, open source controls for iOS</title>
 
-    <link href="content/css/bootstrap.css" rel="stylesheet">
-    <link href="content/css/font-awesome.min.css" rel="stylesheet">
-    <link href="content/css/flat-ui.css" rel="stylesheet">
-    <link href="content/css/style.css" rel="stylesheet">
-    <link href="content/css/flexslider.css" rel="stylesheet">
-    <link href="content/css/loading-bar.css" rel="stylesheet">
+    <!-- inject:css -->
+    <!-- endinject -->
   </head>
   <body>
     <ng-include src="'app/layout/menu.html'"></ng-include>
@@ -26,49 +22,7 @@
     <ng-include src="'app/tips/tips.html'"></ng-include>
     <ng-include src="'app/about/about.html'"></ng-include>
 
-    <!-- Vendor -->
-    <script src="scripts/jquery.min.js"></script>
-    <script src="scripts/angular.min.js"></script>
-    <script src="scripts/angular-route.js"></script>
-    <script src="scripts/jquery.flexslider.js"></script>
-    <script src="scripts/angular-flexslider.js"></script>
-    <script src="scripts/dirPagination.js"></script>
-    <script src="scripts/loading-bar.js"></script>
-    <script src="scripts/parse-1.6.0.min.js"></script>
-    <script src="scripts/flat-ui.min.js"></script>
-
-    <!-- Bootstrap -->
-    <script src="app/app.module.js"></script>
-
-    <!-- Core -->
-    <script src="app/core/core.module.js"></script>
-    <script src="app/core/routes.js"></script>
-    <script src="app/core/dataservice.js"></script>
-
-    <!-- Services -->
-    <script src="app/services/settingsservice.js"></script>
-    <script src="app/services/githubservice.js"></script>
-    <script src="app/services/emailservice.js"></script>
-
-    <!-- Settings -->
-    <script src="app/settings/settings.module.js"></script>
-    <script src="app/settings/settings.js"></script>
-
-    <!-- Feed -->
-    <script src="app/feed/feed.module.js"></script>
-    <script src="app/feed/feed.js"></script>
-
-    <!-- Control -->
-    <script src="app/control/control.module.js"></script>
-    <script src="app/control/control.js"></script>
-    <script src="app/control/report.js"></script>
-
-    <!-- About -->
-    <script src="app/about/about.module.js"></script>
-    <script src="app/about/about.js"></script>
-
-    <!-- Tips -->
-    <script src="app/tips/tips.module.js"></script>
-    <script src="app/tips/tips.js"></script>
+    <!-- inject:js -->
+    <!-- endinject -->
   </body>
 </html>
