--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="sv" ng-app="curatedcontrols">
+<html lang="sv" ng-app="curatedcontrols" ng-strict-di>
   <head>
     <base href="/">
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <title>Curated Controls - Hand picked, open source controls for iOS</title>
 
     <!-- inject:css -->
