--- a/app/about/about.html
+++ b/app/about/about.html
@@ -22,7 +22,7 @@
         </div>
         <div class="modal-footer">
           <div class="text-center">
-            <button type="button" class="btn btn-success" data-dismiss="modal">Okay!</button>
+            <button type="button" class="btn btn-success btn-embossed" data-dismiss="modal">Okay!</button>
           </div>
         </div>
       </div>
