--- a/app/control/report.html
+++ b/app/control/report.html
@@ -39,7 +39,7 @@
                 </div>
                 <div class="form-group">
                   <div class="col-lg-offset-2 col-lg-10">
-                    <button type="submit" class="btn btn-success pull-right" ng-click="vm.send()">Send</button>
+                    <button type="submit" class="btn btn-success btn-embossed pull-right" ng-click="vm.send()">Send</button>
                   </div>
                 </div>
               </form>
@@ -49,7 +49,7 @@
       </div>
       <div class="modal-footer">
         <div class="text-center">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-embossed btn-default" data-dismiss="modal">Close</button>
         </div>
       </div>
     </div>
