--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
         <div class="input-group">
           <input type="text" class="form-control" ng-model="searchString" placeholder="Search controls..">
           <span class="input-group-btn">
-            <button class="btn btn-default" type="submit" ng-click="vm.setSearch(searchString)">Search</button>
+            <button class="btn btn-default btn-embossed" type="submit" ng-click="vm.setSearch(searchString)">Search</button>
           </span>
         </div>
       </form>
@@ -47,18 +47,18 @@
       <div class="tile col-xs-12 col-md-6 col-lg-4" dir-paginate="control in filteredControls = (vm.controls | itemsPerPage:vm.itemsPerPage | filter:vm.tags | filter:vm.search | filter:vm.langFilter | orderBy:vm.dateSort:true)">
         <img ng-show="vm.isNew(control)" src="content/img/ribbon-new.svg" alt="ribbon" class="tile-hot-ribbon">
         <div class="tile-title">
-          <a href="#/c/{{ control.id }}/{{ control.get('name') }}">
+          <a href="/c/{{ control.id }}/{{ control.get('name') }}">
             {{ control.get('name') }}
           </a>
         </div>
         <div class="tile-body">
           <div class="row images">
             <div class="col-xs-12">
-              <flex-slider slide="image in control.get('previews') track by $index" animation="slide" slideshow=false prev-text="" next-text="">
+              <!--<flex-slider slide="image in control.get('previews') track by $index" animation="slide" slideshow=false prev-text="" next-text="">
                 <li>
                   <img ng-src="{{ image._url }}" class="img-responsive img-rounded">
                 </li>
-              </flex-slider>
+              </flex-slider>-->
             </div>
           </div>
         </div>
@@ -72,8 +72,8 @@
         </div>
         <div class="tile-footer">
           <div class="btn-group btn-group-justified">
-            <a class="btn btn-xs btn-default" href="{{ control.get('link') }}"><i class="fa fa-2x fa-github"></i></a>
-            <a class="btn btn-xs btn-default" href="#/c/{{ control.id }}/{{ control.get('name') }}"><strong>More</strong></a>
+            <a class="btn btn-xs btn-default btn-embossed" href="{{ control.get('link') }}"><i class="fa fa-2x fa-github"></i></a>
+            <a class="btn btn-xs btn-default btn-embossed" href="/c/{{ control.id }}/{{ control.get('name') }}"><strong>More</strong></a>
           </div>
         </div>
       </div>
