--- a/app/privacy/privacy.html
+++ b/app/privacy/privacy.html
@@ -1,4 +1,4 @@
 <div class="back-button">
-  <a class="btn btn-danger btn-sm btn-embossed" href="#/">Back</a>
+  <a class="btn btn-danger btn-sm btn-embossed" href="/">Back</a>
 </div>
 PRIVACY
