Add back flex slider

--- a/app/index.html
+++ b/app/index.html
@@ -54,11 +54,11 @@
         <div class="tile-body">
           <div class="row images">
             <div class="col-xs-12">
-              <!--<flex-slider slide="image in control.get('previews') track by $index" animation="slide" slideshow=false prev-text="" next-text="">
+              <flex-slider slide="image in control.get('previews') track by $index" animation="slide" slideshow=false prev-text="" next-text="">
                 <li>
                   <img ng-src="{{ image._url }}" class="img-responsive img-rounded">
                 </li>
-              </flex-slider>-->
+              </flex-slider>
             </div>
           </div>
         </div>
