--- a/app/index.html
+++ b/app/index.html
@@ -42,40 +42,43 @@
   </div>
 </div>
 <div class="row feed-container" ng-controller="Feed as vm">
-  <div class="section">
+  <div class="section container">
     <div class="row">
-      <div class="tile col-xs-12 col-md-6 col-lg-4" dir-paginate="control in filteredControls = (vm.controls | itemsPerPage:vm.itemsPerPage | filter:vm.tags | filter:vm.search | filter:vm.langFilter | orderBy:vm.dateSort:true)">
-        <img ng-show="vm.isNew(control)" src="content/img/ribbon-new.svg" alt="ribbon" class="tile-hot-ribbon">
-        <div class="tile-title">
-          <a href="/c/{{ control.id }}/{{ control.get('name') }}">
-            {{ control.get('name') }}
-          </a>
-        </div>
-        <div class="tile-body">
-          <div class="row images">
+      <div class="tile-wrapper" dir-paginate="control in filteredControls = (vm.controls | itemsPerPage:vm.itemsPerPage | filter:vm.tags | filter:vm.search | filter:vm.langFilter | orderBy:vm.dateSort:true)">
+        <div class="tile col-xs-12 col-md-6 col-lg-4">
+          <img ng-show="vm.isNew(control)" src="content/img/ribbon-new.svg" alt="ribbon" class="tile-hot-ribbon">
+          <div class="tile-title">
+            <a href="/c/{{ control.id }}/{{ control.get('name') }}">
+              {{ control.get('name') }}
+            </a>
+          </div>
+          <div class="tile-body">
+            <div class="row images">
+              <div class="col-xs-12">
+                <flex-slider slide="image in control.get('previews') track by $index" animation="slide" slideshow=false prev-text="" next-text="">
+                  <li>
+                    <img ng-src="{{ image._url }}" class="img-responsive img-rounded">
+                  </li>
+                </flex-slider>
+              </div>
+            </div>
+          </div>
+          <div class="row tile-description">
+            {{ control.get('description') }}
+          </div>
+          <div class="row tile-tags">
             <div class="col-xs-12">
-              <flex-slider slide="image in control.get('previews') track by $index" animation="slide" slideshow=false prev-text="" next-text="">
-                <li>
-                  <img ng-src="{{ image._url }}" class="img-responsive img-rounded">
-                </li>
-              </flex-slider>
+              <span class="label label-default" ng-repeat="tag in control.get('tags')">{{ tag.get('name') }}</span>
+            </div>
+          </div>
+          <div class="tile-footer">
+            <div class="btn-group btn-group-justified">
+              <a class="btn btn-xs btn-default btn-embossed" href="{{ control.get('link') }}"><i class="fa fa-2x fa-github"></i></a>
+              <a class="btn btn-xs btn-default btn-embossed" href="/c/{{ control.id }}/{{ control.get('name') }}"><strong>More</strong></a>
             </div>
           </div>
         </div>
-        <div class="row tile-description">
-          {{ control.get('description') }}
-        </div>
-        <div class="row tile-tags">
-          <div class="col-xs-12">
-            <span class="label label-default" ng-repeat="tag in control.get('tags')">{{ tag.get('name') }}</span>
-          </div>
-        </div>
-        <div class="tile-footer">
-          <div class="btn-group btn-group-justified">
-            <a class="btn btn-xs btn-default btn-embossed" href="{{ control.get('link') }}"><i class="fa fa-2x fa-github"></i></a>
-            <a class="btn btn-xs btn-default btn-embossed" href="/c/{{ control.id }}/{{ control.get('name') }}"><strong>More</strong></a>
-          </div>
-        </div>
+        <div class="clearfix" ng-if="($index + 1) % 3 == 0"></div>
       </div>
     </div>
   </div>
